tests/NormalTests/paczka1/fuzzy1/66452760.err
Error in line 9: S889 A129 -2,9
Error in line 3: 4195 S537 18,3
Error in line 7: S889 A129 35,1
Error in line 13: 4195 A409 3,2
Error in line 14: S889 S889 78,4
Error in line 16: dQb7viO9 A129 13,9
Error in line 23: S889 S537 54,7
Error in line 31: S889 S889 65,9
Error in line 36: S889 A129 87,2
